<resources>
    <string name="app_name">UJOBS</string>
    <string name="str1">Encuentra u ofrece asesorías de cualquier tema</string>
    <string name="str2">Descubre un basto repertorio de asesorías las cuales puedes adquirir a un precio accesible</string>
    <string name="inicio">¡Crea una cuenta con nostros!</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="email">Correo</string>
    <string name="estado">Estado</string>
    <string name="password">Contraseña (Minimo 8 caracteres)</string>
    <string name="crear">Crear Cuenta</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnAuth">Iniciar</string>
    <string name="welcometxt">Bienvenido de nuevo, ¡te hemos hechado de menos!</string>
    <string name="fpassword">¿Ha olvidado su contraseña?</string>
    <string name="resetxt">Restablecer contraseña</string>
    <string name="resetMes">Ingrese el email asociado con su cuenta y nosotros le enviaremos las instrucciones para que pueda reiniciar su contraseña.</string>
    <string name="btnRecovery">Enviar instrucciones</string>
    <string name="asesorias">Asesorias</string>
    <string name="all">Todas</string>
    <string name="top">Populares</string>
    <string name="hot">Nuevo</string>
    <string name="welcome">Hola,</string>
    <string name="byTeach">¡Conviertete en uno de nuestros asesores!</string>
    <string name="next">Siguiente</string>
    <string name="beOneOfUs">Al convertirte en uno de nuestros asesores puedes generar ingresos extra compartiendo tus conocimientos</string>
    <string name="accept">Aceptar</string>
    <string name="otherMoment">Quiza despues</string>
    <string name="aboutUs">Acerca de nostros</string>
    <string name="ujobsD">JAAL es una empresa enfocada en el desarrollo de software a medida</string>
    <string name="products">Nuestros productos</string>
    <string name="ujobs">UJOBS, de estudiantes para estudiantes</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="logOut">Salir</string>
    <string name="create">Nueva asesoria</string>
    <string name="edit">Editar perfil</string>
    <string name="conversations">Conversaciones</string>
    <string name="myCourses">Mis cursos</string>
    <string name="where">Ubicación</string>
    <string name="location">Priv. Lago Verde #94, Colonia Centro C.P 59300, La Piedad, Michoacán, Méx.</string>
    <string name="createMentoring">Crea una asesoria para impartir</string>
    <string name="nameMentoring">Nombre de la asesoria</string>
    <string name="description">Descripcion de la asesoria</string>
    <string name="createMentoringbtn">Crear</string>
    <string name="home">Home</string>
    <string name="aboutUsM">About Us</string>
    <string name="whereM">Location</string>
    <string name="welcomeTo">Bienvenido a UJOBS</string>
    <string name="leyend">De estudiantes para estudiantes</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

</resources>