<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8.5"
        android:background="#66FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"

            android:gravity="center_horizontal"
            android:text="@string/byTeach"
            android:textColor="@color/black"

            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="#66FFFFFF"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/createw"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="#66FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:paddingHorizontal="80dp"
            android:text="@string/beOneOfUs" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/otherMoment"
            app:cornerRadius="50dp" />
        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/btnButtons"
            android:text="@string/accept"
            app:cornerRadius="50dp" />
    </LinearLayout>


</LinearLayout>