<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity"
    android:background="@drawable/bg_gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="#73FFFFFF">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetxt"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical"
        android:background="#73FFFFFF"
        >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/recovery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="#73FFFFFF">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetMes"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="45dp"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:paddingVertical="10dp"
            android:paddingHorizontal="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/border" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="45dp"
            android:backgroundTint="@color/btnButtons"
            android:text="@string/btnRecovery"
            app:cornerRadius="12dp" />

    </LinearLayout>

</LinearLayout>