<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:background="#66FFFFFF"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:gravity="center_horizontal"
            android:text="@string/welcometxt"
            android:textColor="@color/black"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.8"
        android:orientation="vertical"
        android:background="#66FFFFFF">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcometxt"
            app:srcCompat="@drawable/welco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingVertical="35dp"
        android:background="#66FFFFFF">

        <!--Name-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:paddingHorizontal="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/border" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:paddingHorizontal="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPassword"
                android:background="@drawable/border" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fpassword"
            android:layout_gravity="center"
            android:textColor="@color/textButton"
            android:textSize="11sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="45dp"
            android:backgroundTint="@color/btnButtons"
            android:text="@string/btnAuth"
            app:cornerRadius="12dp" />
    </LinearLayout>
</LinearLayout>