<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeTutorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/welcome" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/hi" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="30dp">

            <Button
                android:id="@+id/btnOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="2"
                android:backgroundTint="@color/logOut"
                android:text="@string/logOut"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgHome"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingHorizontal="17dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:height="60dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/btnTod"
                android:drawableLeft="@drawable/add"
                android:paddingHorizontal="70dp"
                android:text="@string/create"
                android:textColor="@color/white"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:height="60dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/update"
                android:paddingHorizontal="70dp"
                android:text="@string/edit"
                android:textColor="@color/black"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/btnConversations"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:height="60dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/msg"
                android:drawableLeft="@drawable/msg"
                android:paddingHorizontal="70dp"
                android:text="@string/conversations"
                app:cornerRadius="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:paddingVertical="10dp"
                android:paddingLeft="33dp"
                android:textColor="@color/black"
                android:text="@string/myCourses" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="Courses">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>