<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/about" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aboutUs"
            android:textColor="@color/black"
            android:textSize="13pt"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:background="@color/bgHome"
        android:gravity="center"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView1"
            android:layout_width="400dp"
            android:layout_height="295dp"
            android:paddingVertical="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/jaal_img"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="120dp"
                android:text="@string/ujobsD"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8pt"
                android:paddingVertical="10dp"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageView2"
                android:layout_width="400dp"
                android:layout_height="295dp"
                android:paddingVertical="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ujobs_img"
                app:riv_corner_radius="30dip"
                app:riv_mutate_background="true" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ujobs"
                android:gravity="center"
                android:paddingHorizontal="100dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>