<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".AuthActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="#66FFFFFF"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"

                    android:gravity="center_horizontal"
                    android:text="@string/inicio"
                    android:textColor="@color/black"

                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="#66FFFFFF"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageView1"
                    android:layout_width="400dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/createw"
                    app:riv_corner_radius="30dip"
                    app:riv_mutate_background="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="#66FFFFFF"
                android:orientation="vertical"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:id="@+id/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:paddingHorizontal="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/border" />

                </com.google.android.material.textfield.TextInputLayout>


                <Spinner
                    android:id="@+id/sp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="45dp"
                    android:layout_marginBottom="14dp"
                    android:contentDescription="Estates"
                    android:background="@drawable/border_drop"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    android:paddingHorizontal="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/border" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    android:paddingHorizontal="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="textPassword"
                        android:background="@drawable/border"
                        />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:background="#66FFFFFF"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"

                    android:gravity="center_horizontal"
                    android:text="@string/byTeach"
                    android:textColor="@color/black"

                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="#66FFFFFF"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/teach_img"
                    app:riv_corner_radius="30dip"
                    app:riv_mutate_background="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="#66FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:paddingHorizontal="80dp"
                    android:text="@string/beOneOfUs" />

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="40dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/otherMoment"
                    app:cornerRadius="50dp" />
                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="40dp"
                    android:backgroundTint="@color/btnButtons"
                    android:text="@string/accept"
                    app:cornerRadius="50dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

